kubernetes/apps/tiny/pterodactyl-ingress-route-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pterodactyl-panel
  namespace: pterodactyl
spec:
  routes:
    - match: Host(`pterodactyl.heimelska.co.uk`)
      kind: Rule
      services:
        - name: pterodactyl-pterodactyl-panel
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
